--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     </div>
                 </li>
                 <li>
-                    <div>
-                        <div class="circle">3</div>
+                    <div id="cart">
+                        <div class="cart__num" id="cart_num">0</div>
                         <div class="cart"><i class="fa-solid fa-cart-shopping"></i></div>
                         <div>Корзина</div>
                     </div>
@@ -90,7 +90,7 @@
         <div class="rating"></div>
       </div>  
        
-      <button class="btn-buy"><i class="fa-solid fa-cart-shopping"></i>&nbsp&nbspВ корзину</button>
+      <button class="card__add"><i class="fa-solid fa-cart-shopping"></i>&nbsp&nbspВ корзину</button>
     </div>
     </div>
   </template>
